# Meta-Hackethon2

./: Dockerfile  Readme.md  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  validate-submission.sh
compliance_scrubber.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py
tasks/: definitions.py  graders.py
