[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-scrubber"
version = "0.1.0"
description = "Meta OpenEnv Hackathon Submission"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.4",
    "openai>=2.7.2",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"